Bug 1308259: Add quartz surface specific code into DrawTargetCairo::CreateSimilarDrawTarget. r=jrmuizel a=ritu

MozReview-Commit-ID: F5fMfRBiOW7